--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header {
 	padding: 35px 100px 0;
 }
 header h2 span {
-	color: lightblue;
+	color: #bf0a30;
 }
 header ul.nav {
 	display: -webkit-flex;
@@ -51,9 +51,28 @@ header ul.nav li:first-child {
 }
 header ul.nav li:last-child {
 	margin-right: 0;
-
+}
+@media(max-width:1000px) {
+	header {
+		padding: 20px 50px;
+	}
+}
+@media (max-width:700px) {
+	header {
+		flex-direction: column;
+	}
+	header h2 {
+		margin-bottom: 15px;
+	}
+	header ul.nav li {
+		margin: 0 7px;
+	}
+	.about-right p {
+		display: none;
+	}
 }
 /*banner area*/
+
 section {
 	display: -webkit-flex;
 	display: -moz-flex;
@@ -89,8 +108,8 @@ section p {
 	color: #fff;
 	text-align: center;
 }
-.banner-area .banner-img {
-	background-image: url(images/Microsoft_Nostalgic_Windows_Wallpaper_4k.jpg);
+.banner-area .banner-img1 {
+	background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/Microsoft_Nostalgic_Windows_Wallpaper_4k.jpg);  
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -101,6 +120,42 @@ section p {
 	z-index: -1;
 	background-position: center center;
 }
+	.banner-area .banner-img2 {
+		background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/Microsoft_Nostalgic_Windows_Wallpaper_4k.jpg);  
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		-webkit-background-size: cover;
+		background-size: cover;
+		z-index: -1;
+		background-position: center center;
+}
+.banner-area .banner-img3 {
+	background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/Microsoft_Nostalgic_Windows_Wallpaper_4k.jpg);  
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	-webkit-background-size: cover;
+	background-size: cover;
+	z-index: -1;
+	background-position: center center;
+}
+	.banner-area .banner-img4 {
+		background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/Microsoft_Nostalgic_Windows_Wallpaper_4k.jpg);  
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		-webkit-background-size: cover;
+		background-size: cover;
+		z-index: -1;
+		background-position: center center;
+	}
 .banner-area .banner-img::after {
 	content: '';
 	position: absolute;
@@ -126,7 +181,7 @@ section p {
 }
 .banner-area a.banner-btn {
 	padding: 15px 35px;
-	background: greenyellow;
+	background: lightgreen;
 	text-transform: uppercase;
 }
 @media (max-width:800px) {
@@ -144,6 +199,17 @@ section p {
 	}
 }
 /*about area*/
+
+ul.about-content {
+	width: 100%;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
 .about-content li {
 	padding: 20px;
 	height: 500px;
@@ -151,6 +217,16 @@ section p {
 	-webkit-background-size: cover;
 	background-size: cover;
 	background-position: center;
+}
+.about-left {
+	flex-basis: 30%;
+	background-image: url(images/2.jpg);
+}
+.about-right {
+	flex-basis: 70%;
+}
+.about-right h2 {
+	font-size: 35px;
 }
 .about-area p {
 	max-width: 800px;
@@ -167,7 +243,16 @@ section p {
 .section-title span {
 	color: #bf0a30;
 }
-
+.about-right h2 {
+	margin-bottom: 3%;
+}
+.about-btn {
+	padding: 15px 35px;
+	background: #bf0a30;
+	border-radius: 50px;
+	text-transform: uppercase;
+	color: #fff;
+}
 @media (max-width: 1000px) {
 	.section-title {
 		font-size: 35px;
@@ -179,7 +264,99 @@ section p {
 		padding: 8px;
 	}
 }
+/*msg area*/
+
+.msg-area {
+	background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(images/a2.jpeg);
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-position: center center;
+	background-attachment: fixed;
+	color: #fff;
+	text-align: center;
+}
+/*service area*/
+
+ul.services-content {
+	width: 100%;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+.services-content li {
+	padding: 0 30px;
+	flex-basis: 33%;
+	text-align: center;
+}
+.services-content img {
+	width: 100%;
+	margin-bottom: 20px;
+}
+.services-content li h4 {
+	font-size: 20px;
+	margin-bottom: 25px;
+	text-transform: uppercase;
+	font-weight: 500;
+	letter-spacing: 3px;
+}
+.services-content li p {
+	margin: 0;
+}
+@media (max-width:1000px) {
+	.services-content li {
+		flex-basis: 100%;
+		margin-bottom: 65px;
+	}
+	.services-content li:last-child {
+		margin-bottom: 0;
+	}
+	.services-content li p {
+		padding: 0;
+	}
+}
+/*contact area*/
+
+ul.contact-content {
+	width: 100%;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+.contact-content li {
+	padding: 0 30px;
+	flex-basis: 33%;
+	text-align: center;
+}
+.contact-content li i {
+	font-size: 50px;
+	color: #bf0a30;
+	margin-bottom: 25px;
+}
+.contact-content li p {
+	margin: 0;
+}
+@media (max-width: 1000px) {
+	.contact-content li {
+		flex-basis: 100%;
+		margin-bottom: 65px;
+	}
+	.contact-content li:last-child {
+		margin-bottom: 0;
+	}
+	.contact-content li p {
+		padding: 0;
+	}
+}
 /*footer*/
+
 footer {
 	display: -webkit-flex;
 	display: -moz-flex;
@@ -193,22 +370,87 @@ footer {
 	background-color: #000;
 	padding: 60px 0;
 }
-@media(max-width:1000px) {
-	header {
-		padding: 20px 50px;
-	}
+.fa:hover {
+	opacity: 0.7;
 }
-@media (max-width:700px) {
-	header {
-		flex-direction: column;
-	}
-	header h2 {
-		margin-bottom: 15px;
-	}
-	header ul.nav li {
-		margin: 0 7px;
-	}
-	.about-right p {
-		display: none;
-	}
+.fa-instagram {
+	text-align: center;
+  }
+  .fa {
+	color: white;
+	padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
 }
+.container {
+	padding: 40px 5%;
+  }
+  
+  .heading-text {
+	margin-bottom: 2rem;
+	font-size: 2rem;
+  }
+  
+  .heading-text span {
+	font-weight: 100;
+  }
+  
+  /* Responsive image gallery rules begin*/
+  
+  .image-gallery {
+	/* Mobile first */
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+  }
+  
+  .image-gallery .column {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+  }
+  
+  .image-item img {
+	width: 100%;
+	border-radius: 5px;
+	height: 100%;
+	object-fit: cover;
+  }
+  
+  @media only screen and (min-width: 768px) {
+	.image-gallery {
+	  flex-direction: row;
+	}
+  }
+  
+  /* overlay styles */
+  
+  .image-item {
+	position: relative;
+	cursor: pointer;
+  }
+  
+  .overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: rgba(57, 57, 57, 0.502);
+	top: 0;
+	left: 0;
+	transform: scale(0);
+	transition: all 0.2s 0.1s ease-in-out;
+	color: #fff;
+	/* center overlay content */
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
+  
+  /* hover */
+  .image-item:hover .overlay {
+	transform: scale(1);
+  }
+  
